add endpoint to create and read meal diary
